@@ -8,6 +8,8 @@ plugins {
     id("org.jetbrains.kotlin.jvm")
 }
 
+apply from: "$project.rootDir/jacoco.gradle"
+
 import org.gradle.api.internal.classpath.ModuleRegistry
 import org.gradle.api.internal.project.ProjectInternal
 
@@ -134,7 +136,6 @@ test {
     failFast = true
     minHeapSize = "1g"
     maxHeapSize = "4g"
-    jvmArgs '-XX:MaxPermSize=4g'
     testLogging {
         events "skipped", "failed"
     }
@@ -157,8 +158,7 @@ def functionalTestTask = tasks.register("functionalTests", Test) {
 }
 
 tasks.named('check') {
-    // dependsOn(tasks.named("integrationTests"))
-    // dependsOn(tasks.named("functionalTests"))
+    dependsOn(tasks.named("integrationTests"))
 }
 
 artifacts {
